--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -33,5 +33,6 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          commit_author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
           commit_message: "[ci] collect-stats"
           branch: ${{ github.head_ref }}
